--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@swimlane/ngx-charts": "9.0.0",
     "@swimlane/ngx-datatable": "13.1.0",
     "@swimlane/ngx-dnd": "5.0.6",
+    "@types/dragula": "3.7.0",
     "@types/prismjs": "1.9.0",
     "angular-archwizard": "3.0.0",
     "angular-calendar": "0.25.2",
@@ -53,12 +54,15 @@
     "guid-typescript": "1.0.9",
     "hammerjs": "2.0.8",
     "lodash": "4.17.13",
+    "mixin-deep": "2.0.1",
     "moment": "2.22.2",
+    "ng-circle-progress": "1.5.1",
     "ng2-charts": "1.6.0",
     "ng2-file-upload": "1.3.0",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "6.6.0",
     "ngx-cookie-service": "1.0.10",
+    "ngx-doughnut-chart": "0.0.4",
     "ngx-material-timepicker": "3.3.1",
     "perfect-scrollbar": "1.4.0",
     "prismjs": "1.15.0",
