--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "angular-file-saver": "1.1.3",
     "angular-in-memory-web-api": "0.6.1",
     "chart.js": "2.7.2",
+    "chart.piecelabel.js": "0.10.0",
+    "chartjs-plugin-labels": "1.0.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
     "d3": "5.7.0",
@@ -58,6 +60,7 @@
     "moment": "2.22.2",
     "ng-circle-progress": "1.5.1",
     "ng2-charts": "1.6.0",
+    "ng2-charts-schematics": "0.1.7",
     "ng2-file-upload": "1.3.0",
     "ngrx-store-freeze": "0.2.4",
     "ngx-color-picker": "6.6.0",
