--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "angular-calendar": "0.25.2",
     "angular-file-saver": "1.1.3",
     "angular-in-memory-web-api": "0.6.1",
-    "chart.js": "2.7.2",
+    "chart.js": "2.9.0",
     "chart.piecelabel.js": "0.10.0",
+    "chartjs-plugin-annotation": "0.5.7",
     "chartjs-plugin-labels": "1.0.1",
     "classlist.js": "1.1.20150312",
     "core-js": "2.5.7",
