--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "angular-calendar": "0.25.2",
     "angular-file-saver": "1.1.3",
     "angular-in-memory-web-api": "0.6.1",
+    "angular2-cookie": "1.2.6",
     "chart.js": "2.9.0",
     "chart.piecelabel.js": "0.10.0",
     "chartjs-plugin-annotation": "0.5.7",
